[package]
name = "diffie-hellman-groups"
version = "0.1.0"
edition = "2021"
description = "Diffie-Hellman Groups"
authors = ["alvin.cpp@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/AlvinHon/schnorr"
categories = ["cryptography"]
keywords = ["cryptography", "rfc-3526"]

[dependencies]
num-bigint = { version = "^0.2.6", features = ["rand", "serde"] }
num-primes = { version = "0.3.0", optional = true }
lazy_static = "1.5.0"
rand = { version = "^0.5", optional = true }
serde = { version = "1.0.210", features = ["serde_derive"] }

[features]
default = ["primegroup"]
primegroup = ["dep:rand", "dep:num-primes"]
